Attempt to fix: https://github.com/Netflix/vector/issues/108 (hostname overlapping checkmark)

--- a/src/app/vector.css
+++ b/src/app/vector.css
@@ -62,6 +62,8 @@
  #hostnameInput {
      margin-left: -1px;
      margin-top: 8px;
+     text-overflow: ellipsis;
+     padding-right: 33px;
  }
 
  #hostspecInput {
